@@ -1,3 +1,7 @@
+Tue Mar  9 20:22:24 2010  Keiju Ishitsuka  <keiju@giant>
+
+	* port.rb: [REQ#218]対応. 不必要なリファレンス渡しを削除
+
 Tue Mar  9 18:00:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* processor.rb, port.rb: [REQ#218]対応
